fix pricing cards
- fix cards being too high
- fix cards being different sizes once the text wraps

--- a/src/styles/pricing/article-cta.scss
+++ b/src/styles/pricing/article-cta.scss
@@ -1,7 +1,7 @@
 .article-cta {
   align-self: center;
   max-width: 100%;
-  padding: 105px 60px 60px;
+  padding: 165px 60px 60px;
   width: 720px;
 
   @include media(xxs) {
